Add Email Portfolio section and update media queries for device specific views

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Casa Del Sol: garden-style apartment complex located in Sunnyvale, CA">
 
-  <title>Golden Company - Matt Sampson</title>
-  <link rel="icon" type="image/png" href="./assets/cubes-solid.svg">   
+  <title>Golden Company - Matt Sampson</title> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="https://kit.fontawesome.com/4c12f61d71.js" crossorigin="anonymous"></script>
 
@@ -50,9 +49,9 @@
                    parcels and packages with utmost care and efficiency. Our company has been in the business for over a decade and has built a 
                    reputation for <span class="gc-secondary-em">creating pixel-perfect emails using HTML5, LESS, FreeMarker, and Handlebars.js</span>. 
                    <br /><br />
-                   By <span class="gc-secondary-em">leveraging thorough Litmus and mobile device tests</span> we strive to provide the best products to all our clients. Our team of 
+                   With a history of proven <span class="gc-secondary-em">Litmus and mobile device tests</span> we strive to provide the best products to all our clients. Our team of 
                    highly trained professionals is committed to ensuring that your email is handled and delivered with the utmost care. 
-                </p>
+                </p> 
               </td>
               <td class="col c2 stacked">
                 <img src="./assets/ghibli_personal_mailman_best.png" width="100%" /> 
@@ -97,18 +96,18 @@
                     Thanks to its unwavering commitment to quality and customer satisfaction, 
                     the company has become a pillar of reliable email creation and delivery services.
                     <br /><br />
-                    Want to learn more about us? <a href="#" class="gc-tertiary-em">Check out our experience</a>. 
-                  </p> 
+                    Want to learn more about us? <br /><span class="gc-tertiary-em">Check out our experience</span>.  
+                  </p>  
                  </div>
                  <div id="experience-1" class="hidden">
-                  <h4 class="headline gc-primary-em">Hawkeye Agency</h4>
+                  <h4 class="headline gc-primary-em">Hawkeye</h4>
                   <p><span class="gc-secondary-em">Golden Company</span> was responsible for designing and managing email campaign 
                     templates using Handlebars.js, Freemarker, and JSON/YAML files, and configuring global partials to generate 
                     personalized email content using Google user API data. 
                     <br /><br />The company also ensured that the Figma creative was translated 
                     into pixel-perfect, fixed-width, mobile-responsive emails, and provided advice during creative meetings to 
                     determine feasibility. Additionally, we identified development hurdles during post-mortems to improve agency 
-                    processes and updated hundreds of messages and templates to meet A11y accessibility standards. 
+                    processes.
                   </p> 
                  </div>
                  <div id="experience-2" class="hidden">
@@ -121,7 +120,7 @@
                     Thanks to its unwavering commitment to quality and customer satisfaction, 
                     the company has become a pillar of reliable email creation and delivery services.
                     <br /><br />
-                    Want to learn more about us? <a href="#" class="gc-tertiary-em">Check out our experience</a>. 
+                    Want to learn more about us? <span class="gc-tertiary-em"><img src="./assets/golden_arrow_right.png" width="100" alt="" />&nbsp;Check out our experience</span>. 
                   </p> 
                  </div>
                  <div id="experience-3" class="hidden">
@@ -133,7 +132,7 @@
                     <br /><br />
                     Thanks to its unwavering commitment to quality and customer satisfaction, 
                     the company has become a pillar of reliable email creation and delivery services.
-                    <br /><br />
+                    <br /><br /> 
                     Want to learn more about us? <a href="#" class="gc-tertiary-em">Check out our experience</a>. 
                   </p> 
                  </div>
@@ -157,6 +156,46 @@
       </table>
     </div>
     <!-- ==================== END Operation Module ==================== -->
+
+    <!-- ==================== Journey Module ==================== -->
+    <div id="journey-mod">
+      <div id="journey-container"> 
+        <h2>Email Portfolio</h2>
+        <p class="subhead">Discover the intricacies behind email, from start to finish.</p>
+        <div id="gallery-container">
+          <table role="presentation" align="center" cellpadding="0" cellspacing="0" width="90%">
+            <tr>
+              <td class="tile">
+                <div>
+                  <img src="./assets/mail_tiles/ghibli_mail_letter_square_v1.png" width="100%" alt="" />
+                  <p class="medium">@JSFiddle</p>
+                  <p class="title">Samilall</p> 
+                  <p class="description">A heartfelt message conveying warm wishes and the sender's longing for the tranquil sea atmosphere.</p>
+                </div>
+              </td>
+              <td class="tile">
+                <div>
+                  <img src="./assets/mail_tiles/ghibli_mail_letter_square_v2.png" width="100%" alt="" />
+                  <p class="medium">@JSFiddle</p>
+                  <p class="title">Midnight</p> 
+                  <p class="description">Words of admiration for the picturesque mountain village and its residents, as well as their fond memories of past visits.</p>
+                </div>
+              </td>
+              <td class="tile">
+                <div>
+                  <img src="./assets/mail_tiles/ghibli_mail_letter_square_v3.png" width="100%" alt="" />
+                  <p class="medium">@GitHub</p>
+                  <p class="title">Royalty</p> 
+                  <p class="description">A nostalgic message to an old friend, filled with memories of past adventures and updates on recent life events.</p>
+                </div>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div> 
+    </div>
+    <!-- ==================== END Journey Module ==================== -->
+    
 
   </div>
 
