Upload portfolio tile creative

--- a/index.html
+++ b/index.html
@@ -157,36 +157,58 @@
     </div>
     <!-- ==================== END Operation Module ==================== -->
 
-    <!-- ==================== Journey Module ==================== -->
-    <div id="journey-mod">
-      <div id="journey-container"> 
+    <!-- ==================== Portfolio Module ==================== -->
+    <div id="portfolio-mod">
+      <div id="portfolio-container"> 
         <h2>Email Portfolio</h2>
         <p class="subhead">Discover the intricacies behind email, from start to finish.</p>
         <div id="gallery-container">
-          <table role="presentation" align="center" cellpadding="0" cellspacing="0" width="90%">
+          <table role="presentation" align="center" cellpadding="0" cellspacing="0">
             <tr>
               <td class="tile">
-                <div>
-                  <img src="./assets/mail_tiles/ghibli_mail_letter_square_v1.png" width="100%" alt="" />
-                  <p class="medium">@JSFiddle</p>
-                  <p class="title">Samilall</p> 
-                  <p class="description">A heartfelt message conveying warm wishes and the sender's longing for the tranquil sea atmosphere.</p>
+                <div class="tile-item-bg">
+                  <div class="tile-container">
+                    <img src="./assets/mail_tiles/ghibli_mail_letter_square_v1.png" width="100%" alt="" />
+                    <p class="medium">@JSFiddle</p>
+                    <p class="title">Samilall</p> 
+                    <p class="description">A heartfelt message conveying warm wishes and the sender's longing for the tranquil sea atmosphere.</p>
+                    <a href="#">View Code</a>
+                  </div>
                 </div>
               </td>
               <td class="tile">
-                <div>
-                  <img src="./assets/mail_tiles/ghibli_mail_letter_square_v2.png" width="100%" alt="" />
-                  <p class="medium">@JSFiddle</p>
-                  <p class="title">Midnight</p> 
-                  <p class="description">Words of admiration for the picturesque mountain village and its residents, as well as their fond memories of past visits.</p>
+                <div class="tile-item-bg">
+                  <div class="tile-container">
+                    <img src="./assets/mail_tiles/ghibli_mail_letter_square_v2.png" width="100%" alt="" />
+                    <p class="medium">@JSFiddle</p>
+                    <p class="title">Midnight</p> 
+                    <p class="description">Words of admiration for the picturesque mountain village and its residents, as well as their fond memories of past visits.</p>
+                    <a href="#">View Code</a>
+                  </div>
+                </div>
+              </td>
+            </tr> 
+            <tr>
+              <td class="tile">
+                <div class="tile-item-bg">
+                  <div class="tile-container">
+                    <img src="./assets/mail_tiles/ghibli_mail_letter_square_v2.png" width="100%" alt="" />
+                    <p class="medium">@JSFiddle</p>
+                    <p class="title">Midnight</p> 
+                    <p class="description">Words of admiration for the picturesque mountain village and its residents, as well as their fond memories of past visits.</p>
+                    <a href="#">View Code</a>
+                  </div>
                 </div>
               </td>
               <td class="tile">
-                <div>
-                  <img src="./assets/mail_tiles/ghibli_mail_letter_square_v3.png" width="100%" alt="" />
-                  <p class="medium">@GitHub</p>
-                  <p class="title">Royalty</p> 
-                  <p class="description">A nostalgic message to an old friend, filled with memories of past adventures and updates on recent life events.</p>
+                <div class="tile-item-bg">
+                  <div class="tile-container">
+                    <img src="./assets/mail_tiles/ghibli_mail_letter_square_v3.png" width="100%" alt="" />
+                    <p class="medium">@GitHub</p>
+                    <p class="title">Royalty</p> 
+                    <p class="description">A nostalgic message to an old friend, filled with memories of past adventures and updates on recent life events.</p>
+                    <a href="#">View Code</a>
+                  </div>
                 </div>
               </td>
             </tr>
