Update footer and reorganize the origins mod

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- ==================== Intro Module ==================== -->
     <div id="intro-mod">
       <h2 class="center intro-subhead">
-        I am an experienced <span class="gc-secondary-em">email developer</span> with a track record of serving 
+        I am an experienced US-based <span class="gc-secondary-em">email developer</span> with a track record of serving 
         pixel-perfect emails to millions of&nbsp;users.
       </h2>
       <div class="golden-gradient-brown-wrapper">
@@ -199,7 +199,7 @@
     <div id="portfolio-mod">
       <div id="portfolio-container"> 
         <h2 class="gc-tertiary-em">Code Samples</h2>
-        <p class="subhead">Check out our recent <span class="gc-tertiary-em">JSFiddle</span> and <span class="gc-tertiary-em">GitHub</span> projects!</p>
+        <p class="subhead">Check out my recent <span class="gc-tertiary-em">JSFiddle</span> and <span class="gc-tertiary-em">GitHub</span> projects!</p>
         <div id="gallery-container">
           <table role="presentation" align="center" cellpadding="0" cellspacing="0">
             <tr>
@@ -255,16 +255,7 @@
       </div> 
     </div>
     <!-- ==================== END Portfolio Module ==================== -->
-
-
-    <!-- ==================== Origins Module ==================== -->
-    <div id="origins-mod">
-      <div class="golden-gradient-brown-wrapper">
-        <div id="origin-content" class="golden-gradient-brown-content"> 
-          <h2 class="gc-tertiary-em center">Closing Statement TBD</h2>
-        </div>
-      </div>
-    </div>
+ 
     
 
   </div>
@@ -274,7 +265,13 @@
   </div>
 
   <footer>
-    <div id="inner-wrapper">  
+    <div id="inner-wrapper"> 
+      <h1 class="gc-tertiary-em center">Thank you for visiting</h1>
+      <h2 class="center"> 
+        If you are in need of an email developer who possesses a passion for problem-solving, 
+        a meticulous attention to detail, and maintains high standards for documentation, 
+        then I encourage you to reach out to&nbsp;me!
+      </h2> 
       <img src="./assets/ghibli_nighttime_mail_truck.png" class="logo" width="125" alt="" />  
       <p class="title center">
         Matthew B. Sampson<br />
