Update client history copy

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- ==================== Intro Module ==================== -->
     <div id="intro-mod">
       <h2 class="center intro-subhead">
-        I am an experienced US-based <span class="gc-secondary-em">email developer</span> with a track record of serving 
+        Hi, my name is <span class="gc-secondary-em">Matthew Sampson</span> and I am an experienced US-based <span class="gc-secondary-em">email&nbsp;developer</span> with a track record of serving 
         pixel-perfect emails to millions of&nbsp;users.
       </h2>
       <div class="golden-gradient-brown-wrapper">
@@ -69,17 +69,18 @@
           <h2 class="gc-primary-em center">
             What i offer
           </h2>
-          <p>
-            With a unique blend of technical expertise, seamless communication, and exceptional template documentation 
-            skills, I excel as an email developer and collaborative team player, delivering outstanding results for 
-            my&nbsp;clients.
+          <p class="center">
+            As an email developer and collaborative team player, I bring a unique blend of technical expertise, 
+            exceptional template documentation skills, and seamless communication that delivers outstanding 
+            results for&nbsp;clients.
             <br /><br />
-            My extensive experience in creating responsive emails with dynamic content based on API datasets, combined 
-            with my expertise in using email testing platforms such as Litmus to troubleshoot issues, makes me a highly 
-            valuable asset to any email marketing&nbsp;team.
+            I specialize in creating dynamic and responsive emails using API datasets and 
+            troubleshooting issues using email testing platforms such as Litmus, making me a valuable asset to 
+            any email marketing team. My adaptability and proficiency in managing up to four projects simultaneously 
+            in fast-paced environments allow me to meet deadlines and achieve results&nbsp;efficiently. 
             <br /><br />
-            Additionally, my ability to manage up to four projects simultaneously while working in fast-paced environments
-            demonstrates my adaptability and proficiency in meeting deadlines and achieving&nbsp;results.
+            If you're looking for a team-centric contributor with an emphasis on communication and documentation I 
+            encourage you to learn more about&nbsp;me.
           </p>  
         </div>
       </div>
@@ -113,38 +114,61 @@
           <td class="c2" valign="top"> 
             <div id="experience-cover">
               <h2 class="headline gc-primary-em center">Web Developer</h2> 
-              <p>
-                Hi, my name is <span class="gc-secondary-em">Matthew Sampson</span> and I'm an experienced web developer with a history of proven email development skills. 
+              <p class="center">
+                As a front-end/email developer with over five years of experience, I have a passion for crafting engaging and 
+                visually stunning websites and emails. With a strong background in HTML, CSS, JavaScript, and email marketing 
+                platforms, I have the ability to seamlessly integrate design and functionality to deliver high-quality, 
+                responsive websites and emails. I have a proven track record of collaborating effectively with cross-functional 
+                teams to deliver projects on time and to exceed client expectations. My expertise in both front-end development 
+                and email marketing allows me to bridge the gap between design and technical implementation, resulting in 
+                cohesive and effective digital&nbsp;experiences.   
                 <br /><br />
-                For the past five years I've helped craft, deliver, and troubleshoot emails that have reached millions of users.  
-                 
+                <span class="gc-tertiary-em">
+                  To learn more about the clients that I've served, click on the banners to the&nbsp;left.
+                </span>
               </p>   
             </div>
             <div id="experience-1" class="hidden">
               <h2 class="headline gc-primary-em center">Google Store</h2>
               <h3 class="headline-role">Web Developer I/II</h3>
-              <p><span class="gc-secondary-em">Golden Company</span> was responsible for designing and managing email campaign 
-                templates using Handlebars.js, Freemarker, and JSON/YAML files, and configuring global partials to generate 
-                personalized email content using Google user API data. 
-                <br /><br />The company also ensured that the Figma creative was translated 
-                into pixel-perfect, fixed-width, mobile-responsive emails, and provided advice during creative meetings to 
-                determine feasibility. Additionally, we identified development hurdles during post-mortems to improve agency 
-                processes.
+              <p>
+                Upon commencing my employment with Hawkeye, I was fortunate enough to exclusively handle Google emails. However, as my 
+                responsibilities grew over time, I gradually took on the task of overseeing Hawkeye's campaign partials for the 
+                Google Store&nbsp;wing. 
+                <br /><br />
+                During my tenure, my duties entailed analyzing campaign-specific Figma/Sketch files to create reusable Handlebars 
+                and Jinja partials, developing and testing pixel-perfect emails on mobile devices and email testing platforms like 
+                Litmus, and performing code reviews for my Hawkeye&nbsp;colleagues.
+                <br /><br />
+                In the latter stages of my employment, I collaborated solely with Google Store engineers to generate US + rest-of-world AMP emails that 
+                incorporated various engaging features for users. Our combined efforts resulted in the successful deployment of
+                interactive emails, which reached a vast audience of millions across the&nbsp;globe.
+                <br /><br />
+                <span class="gc-tertiary-em">
+                  HTML5, CSS/LESS/SCSS, Freemarker, Jinja, Handlebars.js, YAML, JSON, Litmus, Figma, Sketch, Google AMP, Workfront, 
+                  Jira, A11y Accessibility Compliance, Chrome Developer Tools, Google API, &nbsp;Git
+                </span>
               </p>  
             </div>
             <div id="experience-2" class="hidden">
               <h2 class="headline gc-primary-em center">Nest Renew</h2>
               <h3 class="headline-role">Web Developer II</h3>
               <p>
-                I worked at Starbucks for five and a half years, and during that time, I experienced firsthand the importance of exceptional 
-                customer service. As a barista, I learned how to effectively connect and communicate with customers, making every cup of coffee 
-                more than just a transaction. It was an opportunity to engage in meaningful conversation and provide personalized&nbsp;care.
+                Utilizing the knowledge and skills I gained while working on Google Store emails and partials, my manager entrusted 
+                me with the responsibility of assisting the Nest Renew client in creating a reusable set of accessible modules and templates for 
+                their forthcoming eco-friendly email campaign&nbsp;updates.
                 <br /><br />
-                Admittedly, it was not always easy for me. When I first started, I was shy and struggled with basic social skills like maintaining 
-                eye contact or carrying a conversation. But, I realized that to succeed in any professional career, I needed to develop these skills. 
-                So, over time, through tens of thousands of cups of coffee, I learned how to properly interface with people and make genuine connections. 
-                This experience taught me the true value of exceptional customer service and the power of human connection, transforming me into a 
-                confident, capable, and empathetic person that I am&nbsp;today.
+                Being the sole developer of this project, I developed reusable email partials utilizing a combination of Handlebars.js 
+                and the client's Connect Composer snippet platform. Subsequently, over the following few months, I produced and 
+                dispatched several emails to recipients in the United States and&nbsp;Spain.
+                <br /><br />
+                Over time, I trained additional Hawkeye developers to work on the campaign and produced detailed documentation 
+                concerning the frequently used partials and&nbsp;snippets.
+                <br /><br />
+                <span class="gc-tertiary-em">
+                  HTML5, CSS/LESS/SCSS, Freemarker, Jinja, Handlebars.js, YAML, JSON, Litmus, Figma, Sketch, Google AMP, Workfront, 
+                  Jira, A11y Accessibility Compliance, Chrome Developer Tools, Google API, &nbsp;Git
+                </span>
               </p> 
             </div> 
             <div id="experience-3" class="hidden">
@@ -159,6 +183,10 @@
                 <br /><br />
                 For larger tasks such as implementing new web pages, I pair programmed with the primary database manager to pull in CSV / website data
                 to properly populate cirriculum pages. 
+                <br /><br />
+                <span class="gc-tertiary-em">
+                  Ruby on Rails, React, jQuery, Javascript, PostgreSQL, MongoDB, HTML5, CSS/LESS, JSON, Git
+                </span>
               </p> 
             </div>
             <div id="experience-4" class="hidden">
@@ -171,6 +199,10 @@
                 meetings to discuss feature requests, creative designs, and client feedback.
                 <br /><br />
                 To see the live website visit the Casa Del Sol web presence located&nbsp;<a class="gc-secondary-em" href="https://www.casadelsolsunnyvale.com/">here</a>.
+                <br /><br />
+                <span class="gc-tertiary-em">
+                  HTML5, CSS/LESS, Javascript, Google API, Web Design, Freelance, Client-facing Interaction, Change Request Documentation, Git 
+                </span>
               </p> 
             </div>
             <div id="experience-5" class="hidden">
@@ -187,6 +219,10 @@
                 these experiences, I emerged as a confident, capable, and empathetic person, a far cry from the shy individual I used to be. 
                 The skills and qualities I acquired at Starbucks have served me well in both my personal and professional life, making it an 
                 experience I will always cherish.
+                <br /><br />
+                <span class="gc-tertiary-em">
+                  Team Work, Customer Service, Face-paced Environment, Multitasking, Team Management
+                </span>
               </p> 
             </div> 
           </td>
